- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.6.0
Due to an erroneous check in QFontDatabase::load, any font with a weight of Thin is reset to Normal, breaking usage of Thin fonts in Qt.
- relates to
- 
                    QTBUG-51335 Font style matching is inconsistent -         
- Reported
 
-         
| For Gerrit Dashboard: QTBUG-53196 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 158253,11 | Fix bugs causing Thin font weights to be ignored or mishandled. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 | 
