src/plugins/platforms/windows/qwindowsfontengine.cpp
@@ -1342,8 +1342,7 @@ QFontEngine *QWindowsMultiFontEngine::loadEngine(int at)
                 QWindowsFontEngineDirectWrite *fedw = new QWindowsFontEngineDirectWrite(directWriteFontFace,
                                                                                         fontEngine->fontDef.pixelSize,
                                                                                         data);
-                if (fontEngine->fontDef.weight > QFont::Normal)
-                    fedw->fontDef.weight = fontEngine->fontDef.weight;
+                fedw->fontDef.weight = fontEngine->fontDef.weight;
                 if (fontEngine->fontDef.style > QFont::StyleNormal)
                     fedw->fontDef.style = fontEngine->fontDef.style;
                 fedw->fontDef.family = fam;
@@ -1360,8 +1359,7 @@ QFontEngine *QWindowsMultiFontEngine::loadEngine(int at)
     // reason
 
     QFontEngine *fe = new QWindowsFontEngine(fam, lf, data);
-    if (fontEngine->fontDef.weight > QFont::Normal)
-        fe->fontDef.weight = fontEngine->fontDef.weight;
+    fe->fontDef.weight = fontEngine->fontDef.weight;
     if (fontEngine->fontDef.style > QFont::StyleNormal)
         fe->fontDef.style = fontEngine->fontDef.style;
     fe->fontDef.family = fam;
